--- a/Assignment_1/notebooks/assignment1_1.ipynb
+++ b/Assignment_1/notebooks/assignment1_1.ipynb
@@ -482,7 +482,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "depi2",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -496,9 +496,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
