--- a/Assignment_1/notebooks/assignment1_2.ipynb
+++ b/Assignment_1/notebooks/assignment1_2.ipynb
@@ -9,14 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import cv2\n",
     "import numpy as np\n",
     "import os\n",
-    "import matplotlib.pyplot as plt\n"
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.ndimage import maximum_filter\n"
    ]
   },
   {
@@ -137,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -152,9 +153,6 @@
     }
    ],
    "source": [
-    "import cv2\n",
-    "import numpy as np\n",
-    "\n",
     "# Assume canny_edge is already computed\n",
     "height, width = canny_edge.shape  # Get image dimensions\n",
     "\n",
@@ -293,11 +291,6 @@
     }
    ],
    "source": [
-    "import cv2\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from scipy.ndimage import maximum_filter\n",
-    "\n",
     "nms_size = 5  \n",
     "maxima = maximum_filter(accumulator, size=nms_size)\n",
     "accumulator[accumulator < maxima] = 0 \n",
