--- a/Assignment_1/notebooks/assignment1_1.ipynb
+++ b/Assignment_1/notebooks/assignment1_1.ipynb
@@ -481,7 +481,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "depi2",
    "language": "python",
    "name": "python3"
   },
@@ -495,7 +495,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
