no more edits needed for part1

--- a/Assignment_2/notebooks/assignment2_1.ipynb
+++ b/Assignment_2/notebooks/assignment2_1.ipynb
@@ -721,31 +721,31 @@
     "        \n",
     "        # Step 7: Warp the cropped AR frame to the current book position\n",
     "        warped_ar = cv2.warpPerspective(cropped_ar_frame, H, (book_frame_w, book_frame_h), dst=result, borderMode=cv2.BORDER_TRANSPARENT)\n",
+    "        \n",
     "        #Check if the warped AR frame is empty\n",
     "        if warped_ar is None or warped_ar.size == 0:  \n",
     "            print(\"Warning: Warped AR frame is empty. Skipping this frame.\")\n",
     "            final_video_frames.append(result)\n",
     "            continue\n",
     "        \n",
-    "        # Step 8: Blend the warped AR frame with the book frame\n",
+    "       \n",
     "\n",
-    "        # Convert the warped AR frame to grayscale\n",
-    "        gray_warped = cv2.cvtColor(warped_ar, cv2.COLOR_BGR2GRAY)\n",
-    "        _, alpha_mask = cv2.threshold(gray_warped, 1, 255, cv2.THRESH_BINARY)\n",
-    "        alpha_mask = cv2.merge([alpha_mask] * 3)\n",
-    "        # Blend the images using the mask\n",
-    "        result = cv2.bitwise_and(result, alpha_mask)\n",
-    "        # Add the warped AR frame to the result\n",
-    "        result = cv2.add(result, warped_ar)\n",
-    "        \n",
-    "        \n",
+    "          # Step 8: Book area corners transformed\n",
     "        book_corners_transformed = cv2.perspectiveTransform(book_corners, H)\n",
-    "        result = cv2.polylines(result, [np.int32(book_corners_transformed)], \n",
-    "                            isClosed=True, color=(0, 255, 0), thickness=2)\n",
-    "    \n",
+    "\n",
+    "        # Step 9: Always overlay all pixels \n",
+    "        result = warped_ar.copy()\n",
+    "        \n",
+    "        # Optional: Draw the green polygon around the book\n",
+    "        result = cv2.polylines(result, [np.int32(book_corners_transformed)],\n",
+    "                               isClosed=True, color=(0, 255, 0), thickness=2)\n",
+    "\n",
+    "\n",
+    "        \n",
+    "\n",
     "        # Add to final video frames\n",
     "        final_video_frames.append(result)\n",
-    "        \n",
+    "\n",
     "\n",
     "    return final_video_frames"
    ]
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -810,7 +810,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Video saved to /home/nadine/Desktop/Computer Vision/Computer-Vision-Course-Assignments/Assignment_2/output/book_ar.avi\n"
+      "Video saved to /home/nadine/Desktop/Computer Vision/Computer-Vision-Course-Assignments/Assignment_2/output/book_ar_video.avi\n"
      ]
     }
    ],
