--- a/Assignment_2/notebooks/assignment2_1.ipynb
+++ b/Assignment_2/notebooks/assignment2_1.ipynb
@@ -829,7 +829,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "depi2",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -843,7 +843,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
