Added Comments on inceptionV3.ipynb

--- a/Assignment_4/inceptionV3.ipynb
+++ b/Assignment_4/inceptionV3.ipynb
@@ -1,8 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "9c27fb05",
+   "metadata": {},
+   "source": [
+    "## Pets Expression Classification Using:\n",
+    "### InceptionV3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f5eb710",
+   "metadata": {},
+   "source": [
+    "### Importing The Necessary Libraries:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "5048d436",
    "metadata": {},
    "outputs": [
@@ -16,18 +33,29 @@
     }
    ],
    "source": [
+    "import kagglehub\n",
+    "import numpy as np\n",
+    "import os\n",
+    "\n",
     "import tensorflow as tf\n",
-    "from tensorflow.keras import layers\n",
+    "from tensorflow.keras import layers, regularizers\n",
     "from tensorflow.keras.layers import Conv2D, MaxPooling2D, AveragePooling2D, Input, concatenate, GlobalAveragePooling2D, Dropout, Dense, BatchNormalization\n",
     "from tensorflow.keras.models import Model\n",
     "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
-    "import kagglehub\n",
+    "\n",
     "from sklearn.metrics import classification_report, confusion_matrix\n",
-    "import numpy as np\n",
-    "import os\n",
+    "from sklearn.metrics import classification_report, confusion_matrix\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.metrics import classification_report, confusion_matrix\n",
     "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4507584f",
+   "metadata": {},
+   "source": [
+    "### Downloading the Dataset from kaggle and Storing them in a local folder"
    ]
   },
   {
@@ -57,16 +85,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "938d8008",
+   "metadata": {},
+   "source": [
+    "### Custom InceptionV3 Architecture\n",
+    "\n",
+    "This section defines a custom InceptionV3 architecture implemented using Keras. The model closely follows the original InceptionV3 design, including Inception-A, Inception-B, and Inception-C modules, along with Reduction-A and Reduction-B blocks for downsampling.\n",
+    "\n",
+    "Each module is built using `Conv2D`, `BatchNormalization`, and `ReLU` activation layers, with appropriate filter sizes and dimensionality reduction as in the original paper. The final architecture is customized to classify pet facial expressions by changing the output layer to use `softmax` over `4` classes.\n",
+    "\n",
+    "Key features:\n",
+    "- Modular design with helper functions for Inception modules.\n",
+    "- L2 weight regularization applied to convolutional layers.\n",
+    "- Global Average Pooling and Dropout for regularization before classification.\n",
+    "- Suitable input shape: (299, 299, 3) for compatibility with the original InceptionV3 setup.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "37534917",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tensorflow as tf\n",
-    "from tensorflow.keras import layers, Model, regularizers\n",
-    "\n",
-    "\n",
     "def conv_bn_relu(x, filters, kernel_size, strides=(1, 1), padding='same', weight_decay=0.00004):\n",
     "    x = layers.Conv2D(filters, kernel_size, strides=strides, padding=padding,\n",
     "                      use_bias=False,\n",
@@ -196,6 +238,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8cd73a14",
+   "metadata": {},
+   "source": [
+    "### Data Preparation and Augmentation\n",
+    "\n",
+    "To train the InceptionV3 model for pet facial expression classification, we prepare the dataset using `ImageDataGenerator` from Keras. This section handles image preprocessing, augmentation, and loading the training, validation, and test datasets from directory structures.\n",
+    "\n",
+    "Key details:\n",
+    "- **Image Size:** All images are resized to `(299, 299)` to match the input requirements of InceptionV3.\n",
+    "- **Batch Size:** We use a batch size of 32 for training and validation, and 1 for testing to evaluate each image individually.\n",
+    "- **Data Augmentation:** Applied only to the training set to improve generalization. Augmentations include:\n",
+    "  - Rescaling pixel values to [0, 1]\n",
+    "  - Random rotation (±20 degrees)\n",
+    "  - Random zoom\n",
+    "  - Horizontal flips\n",
+    "  - Width and height shifts\n",
+    "  - Shear transformation\n",
+    "  - Filling strategy for newly created pixels\n",
+    "- **Validation and Test Sets:** Only rescaled without augmentation to maintain evaluation integrity."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "b5fe0aed",
@@ -249,6 +314,28 @@
     "    class_mode='categorical',\n",
     "    shuffle=False\n",
     ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc50badb",
+   "metadata": {},
+   "source": [
+    "### Model Compilation\n",
+    "\n",
+    "We build and compile the custom InceptionV3 model for the pet facial expression classification task.\n",
+    "\n",
+    "- **Model Building:** The `build_inception_v3` function is called with:\n",
+    "  - `input_shape=(299, 299, 3)` to match the preprocessed image size.\n",
+    "  - `num_classes=4` corresponding to the number of expression categories in the dataset.\n",
+    "\n",
+    "- **Optimizer:** We use the Adam optimizer with a learning rate of `1e-4`, which offers adaptive learning and generally performs well on image classification tasks.\n",
+    "\n",
+    "- **Loss Function:** `categorical_crossentropy` is used since this is a multi-class classification problem with one-hot encoded labels.\n",
+    "\n",
+    "- **Metrics:** Model performance is tracked using `accuracy`.\n",
+    "\n",
+    "A summary of the model architecture is printed to verify the structure and parameter count before training begins."
    ]
   },
   {
@@ -4175,8 +4262,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d8fd4a2c",
+   "metadata": {},
+   "source": [
+    "### Model Training\n",
+    "\n",
+    "The compiled InceptionV3 model is trained on the pet facial expression dataset using the preprocessed and augmented training data on 20 epochs.\n",
+    "\n",
+    "- **Training Generator:** `train_gen` provides augmented batches of training images.\n",
+    "- **Validation Generator:** `val_gen` is used to evaluate the model’s performance on unseen validation data after each epoch.\n",
+    "- **Epochs:** The model is trained for 20 epochs.\n",
+    "\n",
+    "This training process helps the model learn to distinguish between the 4 classes of pet expressions by minimizing the categorical crossentropy loss and improving classification accuracy."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "0b992de8",
    "metadata": {},
    "outputs": [
@@ -4250,12 +4353,33 @@
     "    train_gen,\n",
     "    epochs=20,\n",
     "    validation_data=val_gen,\n",
-    ")\n"
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4360007d",
+   "metadata": {},
+   "source": [
+    "### Model Evaluation on Test Data\n",
+    "\n",
+    "After training, the model is evaluated on the test set to measure its generalization performance.\n",
+    "\n",
+    "- **Predictions:** The model predicts class probabilities for each test image using `model.predict()`, and the predicted class labels are obtained using `np.argmax`.\n",
+    "- **True Labels:** Ground truth labels are extracted directly from the `test_gen`.\n",
+    "\n",
+    "#### Evaluation Metrics:\n",
+    "- **Classification Report:** Displays precision, recall, F1-score, and accuracy for each class using `classification_report` from `sklearn.metrics`. It helps assess performance per class.\n",
+    "- **Confusion Matrix:** A confusion matrix is plotted using Seaborn to visualize how well the model distinguishes between each expression category.\n",
+    "  - Rows represent **true labels**, and columns represent **predicted labels**.\n",
+    "  - Helps identify where the model is confusing one class for another.\n",
+    "\n",
+    "This evaluation provides both a numerical and visual understanding of the model's strengths and weaknesses on the test data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "5190f8e0",
    "metadata": {},
    "outputs": [
@@ -4290,7 +4414,6 @@
    ],
    "source": [
     "\n",
-    "\n",
     "y_pred_probs = model.predict(test_gen)\n",
     "y_pred = np.argmax(y_pred_probs, axis=1)\n",
     "y_true = test_gen.classes\n",
@@ -4308,6 +4431,22 @@
     "plt.ylabel(\"True Label\")\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4163773",
+   "metadata": {},
+   "source": [
+    "### Model Training (Updated: 10 Epochs)\n",
+    "\n",
+    "The InceptionV3 model is trained using the augmented training data and validated on a separate validation set.\n",
+    "\n",
+    "- **Training Generator:** `train_gen` provides real-time data augmentation.\n",
+    "- **Validation Generator:** `val_gen` is used to evaluate performance after each epoch.\n",
+    "- **Epochs:** Increased to **10** to allow the model more opportunities to learn complex features from the data.\n",
+    "\n",
+    "By training for more epochs, the model is expected to better capture distinguishing patterns in pet facial expressions."
    ]
   },
   {
