Added Comments to DenseNet121.ipynb

--- a/Assignment_4/DenseNet121.ipynb
+++ b/Assignment_4/DenseNet121.ipynb
@@ -1,8 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "59606f27",
+   "metadata": {},
+   "source": [
+    "## Pets Expression Classification Using:\n",
+    "### DenseNet121"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abafbc16",
+   "metadata": {},
+   "source": [
+    "### Importing The Necessary Libraries:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "5e8b6b36",
    "metadata": {},
    "outputs": [
@@ -21,22 +38,24 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.metrics import classification_report, confusion_matrix\n",
     "import seaborn as sns\n",
+    "import kagglehub\n",
     "\n",
     "import tensorflow as tf\n",
     "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
     "from tensorflow.keras.layers import GlobalAveragePooling2D, Dense\n",
     "from tensorflow.keras.models import Model\n",
     "from tensorflow.keras.optimizers import Adam\n",
-    "\n",
-    "import numpy as np\n",
-    "from sklearn.metrics import classification_report, confusion_matrix\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "\n",
-    "import kagglehub\n",
-    "\n",
     "from tensorflow.keras.layers import Conv2D, BatchNormalization, ReLU, AveragePooling2D, Input, Concatenate\n",
-    "from tensorflow.keras.callbacks import EarlyStopping"
+    "from tensorflow.keras.callbacks import EarlyStopping\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ec40805",
+   "metadata": {},
+   "source": [
+    "### Downloading the Dataset from kaggle and Storing them in a local folder"
    ]
   },
   {
@@ -63,6 +82,29 @@
     "train_dir = os.path.join(path, \"Master Folder\", \"train\")\n",
     "val_dir = os.path.join(path, \"Master Folder\", \"valid\")\n",
     "test_dir = os.path.join(path, \"Master Folder\", \"test\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78529fcb",
+   "metadata": {},
+   "source": [
+    "In this section, the training, validation, and test datasets are prepared for training a DenseNet121 model. Images are resized to **224x224**, which matches the input size expected by DenseNet121.\n",
+    "\n",
+    "- **Training Data Augmentation:** To improve generalization and prevent overfitting, various augmentation techniques are applied using `ImageDataGenerator`:\n",
+    "  - Rescaling pixel values to the `[0, 1]` range\n",
+    "  - Random rotations (up to 30°)\n",
+    "  - Random zooms, horizontal flips, and shifts in width and height\n",
+    "  - Shearing and filling strategy for transformed areas\n",
+    "  \n",
+    "- **Validation and Test Sets:** These are only rescaled (no augmentation) to ensure consistent evaluation.\n",
+    "\n",
+    "- **Data Generators:**\n",
+    "  - `train_gen` loads and augments training images.\n",
+    "  - `val_gen` loads validation images for monitoring during training.\n",
+    "  - `test_gen` loads test images for final evaluation, with `shuffle=False` to maintain label order for metrics like confusion matrix.\n",
+    "\n",
+    "This setup ensures the model sees varied data during training while being evaluated fairly on clean validation/test sets.\n"
    ]
   },
   {
@@ -119,6 +161,22 @@
     "    class_mode='categorical',\n",
     "    shuffle=False\n",
     ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40401b58",
+   "metadata": {},
+   "source": [
+    "### Building the DenseNet121 Model\n",
+    "\n",
+    "In this section, the **DenseNet121** architecture from Keras Applications is used for pet facial expression classification.\n",
+    "\n",
+    "- **Weights:** `weights=None` ensures the model is initialized from scratch (not using pre-trained ImageNet weights), suitable when training on a custom dataset.\n",
+    "- **Input Shape:** Set to `(224, 224, 3)` to match the preprocessed image dimensions.\n",
+    "- **Number of Classes:** The output layer has 4 neurons (for 4 pet expression categories) with softmax activation.\n",
+    "\n",
+    "This built-in implementation provides a reliable, optimized baseline to compare with any custom DenseNet121 models built from scratch."
    ]
   },
   {
@@ -2778,16 +2836,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1c1be391",
+   "metadata": {},
+   "source": [
+    "### Custom DenseNet121 Implementation\n",
+    "\n",
+    "This section defines a custom implementation of the **DenseNet121** architecture, built from scratch using TensorFlow/Keras layers.\n",
+    "\n",
+    "Key Components:\n",
+    "- **Convolution Block (`conv_block`)**: Implements the bottleneck structure with a `1x1` followed by a `3x3` convolution, each preceded by Batch Normalization and ReLU activation. The output is concatenated with the input to enable dense connectivity.\n",
+    "- **Dense Block (`dense_block`)**: A stack of `conv_block`s, with the number of layers determined by the `block_config` parameter.\n",
+    "- **Transition Layer (`transition_layer`)**: Reduces the number of feature maps using a `1x1` convolution followed by `2x2` average pooling, with optional compression.\n",
+    "- **DenseNet121_Custom Model**:\n",
+    "  - Begins with a `7x7` convolution and max pooling.\n",
+    "  - Follows the DenseNet121 layout: `[6, 12, 24, 16]` layers in the four dense blocks.\n",
+    "  - Ends with batch normalization, ReLU, global average pooling, and a softmax classification layer.\n",
+    "\n",
+    "This model is flexible and allows experimentation with growth rates, compression factors, and dataset-specific configurations."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9724135d",
+   "metadata": {},
+   "source": [
+    "### Custom DenseNet121 Implementation\n",
+    "\n",
+    "This section defines a custom implementation of the **DenseNet121** architecture, built from scratch using TensorFlow/Keras layers.\n",
+    "\n",
+    "Key Components:\n",
+    "- **Convolution Block (`conv_block`)**: Implements the bottleneck structure with a `1x1` followed by a `3x3` convolution, each preceded by Batch Normalization and ReLU activation. The output is concatenated with the input to enable dense connectivity.\n",
+    "- **Dense Block (`dense_block`)**: A stack of `conv_block`s, with the number of layers determined by the `block_config` parameter.\n",
+    "- **Transition Layer (`transition_layer`)**: Reduces the number of feature maps using a `1x1` convolution followed by `2x2` average pooling, with optional compression.\n",
+    "- **DenseNet121_Custom Model**:\n",
+    "  - Begins with a `7x7` convolution and max pooling.\n",
+    "  - Follows the DenseNet121 layout: `[6, 12, 24, 16]` layers in the four dense blocks.\n",
+    "  - Ends with batch normalization, ReLU, global average pooling, and a softmax classification layer.\n",
+    "\n",
+    "This model is flexible and allows experimentation with growth rates, compression factors, and dataset-specific configurations."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "94e01ab8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tensorflow as tf\n",
-    "from tensorflow.keras.layers import Conv2D, BatchNormalization, ReLU, AveragePooling2D, GlobalAveragePooling2D, Dense, Input, Concatenate\n",
-    "from tensorflow.keras.models import Model\n",
-    "\n",
     "def conv_block(x, growth_rate):\n",
     "    # Bottleneck layer: BN-ReLU-1x1 Conv\n",
     "    x1 = BatchNormalization()(x)\n",
@@ -5374,6 +5470,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f5daf10e",
+   "metadata": {},
+   "source": [
+    "### Model Training\n",
+    "\n",
+    "The compiled DenseNet121 model is trained on the pet facial expression dataset using the preprocessed and augmented training data on 20 epochs.\n",
+    "\n",
+    "- **Training Generator:** `train_gen` provides augmented batches of training images.\n",
+    "- **Validation Generator:** `val_gen` is used to evaluate the model’s performance on unseen validation data after each epoch.\n",
+    "- **Epochs:** The model is trained for 20 epochs.\n",
+    "\n",
+    "This training process helps the model learn to distinguish between the 4 classes of pet expressions by minimizing the categorical crossentropy loss and improving classification accuracy."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "id": "a56c4d3f",
@@ -5441,6 +5553,27 @@
     "    train_gen,\n",
     "    validation_data=val_gen,\n",
     "    epochs=20)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b9eaa43",
+   "metadata": {},
+   "source": [
+    "### Model Evaluation on Test Data\n",
+    "\n",
+    "After training, the model is evaluated on the test set to measure its generalization performance.\n",
+    "\n",
+    "- **Predictions:** The model predicts class probabilities for each test image using `model.predict()`, and the predicted class labels are obtained using `np.argmax`.\n",
+    "- **True Labels:** Ground truth labels are extracted directly from the `test_gen`.\n",
+    "\n",
+    "#### Evaluation Metrics:\n",
+    "- **Classification Report:** Displays precision, recall, F1-score, and accuracy for each class using `classification_report` from `sklearn.metrics`. It helps assess performance per class.\n",
+    "- **Confusion Matrix:** A confusion matrix is plotted using Seaborn to visualize how well the model distinguishes between each expression category.\n",
+    "  - Rows represent **true labels**, and columns represent **predicted labels**.\n",
+    "  - Helps identify where the model is confusing one class for another.\n",
+    "\n",
+    "This evaluation provides both a numerical and visual understanding of the model's strengths and weaknesses on the test data."
    ]
   },
   {
